# Ascend

./: .gitignore  README.md  bts.jsonc  package.json  planning.md
.github/workflows/: adapter-publish.yml  contract-artifacts.yml  contracts.yml
apps/web/: .env.example  package.json  tsconfig.json
apps/web/public/favicon/: site.webmanifest
apps/web/tests/: chain-actions.test.ts  fixtures-chain-actions.json
audit/: milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md
contracts/qubic/: CMakeLists.txt  README.md  conanfile.txt
contracts/qubic/scripts/: localnet.sh
contracts/qubic/src/: ledger.cpp  ledger.hpp
contracts/qubic/tests/: ledger_test.cpp
docs/milestone-1/: implementation-status.md  product-brief.md  qubic-contract-spec.md  system-architecture.md  technical-backlog.md
docs/milestone-2/: contract-roadmap.md  implementation-status.md  integration-plan.md  localnet-readme.md  technical-backlog.md
docs/milestone-2/samples/: chain-actions.json  qubic-events.json
docs/milestone-3/: implementation-status.md  integration-plan.md  rule-dsl.md  technical-backlog.md
docs/milestone-3/samples/: chain-actions.json  rules.json
docs/milestone-4/: badge-registry.md  implementation-status.md  integration-plan.md  leaderboard-plan.md  notifications.md  reward-loop.md  technical-backlog.md
docs/milestone-4/samples/: leaderboard-week5.json  reward-event.json
docs/milestone-5/: admin-panel.md  implementation-status.md  integration-plan.md  launch-checklist.md  notifications-pipeline.md  technical-backlog.md
(+30 files in other folders)
